--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+client/node_modules
 /node_modules
 /.pnp
 .pnp.js
@@ -9,7 +10,7 @@
 /coverage
 
 # production
-/build
+client/build
 
 # misc
 .DS_Store
@@ -23,4 +24,4 @@ yarn-debug.log*
 yarn-error.log*
 
 # Local Netlify folder
-.netlify
+client/.netlify
