--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client": "cd client && npm start",
     "server": "nodemon server.js",
     "build": "cd client && npm run build",
-    "dev": "npm run server && npm run client",
+    "dev": "npm run server & npm run client",
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
