--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,13 @@
   "name": "crwn-clothing",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^4.1.0",
+    "axios": "^0.19.2",
     "firebase": "^7.15.4",
     "lodash.memoize": "^4.1.2",
     "node-sass": "^4.14.1",
