--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "^4.0.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
